Fix svg grid gap

--- a/static/style.scss
+++ b/static/style.scss
@@ -67,17 +67,16 @@ html, body {
     flex-direction: column;
     background-color: $background;
     background-clip: padding-box;
-    overflow: visible;
     position: relative;
 }
 
 #s1Accent {
-    position: absolute;
+    display: block;
+    margin: -5px 0;
     transform: scale(-1, 1);
-    right: 0;
     z-index: 1;
     height: auto;
-    width: 130%;
+    width: 100%;
 }
 
 #s1Button {
@@ -100,11 +99,9 @@ html, body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    position: absolute;
     height: 86%;
     width: 100%;
     background: $darkAccentOne;
-    bottom: 0;
     z-index: 0;
 }
 
@@ -171,7 +168,8 @@ html, body {
 
 #s1C3 {
     position: relative;
-    height: inherit;
+    height: 50%;
+    overflow: hidden;
 }
 
 #portrait {
@@ -275,8 +273,14 @@ html, body {
     grid-area: s2;
     text-align: center;
     height: 100%;
-    overflow: hidden;
     color: $lightAccentOne;
+}
+
+#s2Accent {
+    display: block;
+    overflow: visible;
+    margin: -5px 0;
+    z-index: 1;
 }
 
 #s3 {
@@ -289,14 +293,16 @@ html, body {
 }
 
 #s3Accent1 {
+    display: block;
     height: auto;
     width: 100%;
+    margin: -5px 0;
 }
 
 #s3Accent2 {
     transform: rotate(180deg);
-    position: absolute;
-    bottom: 0;
+    display: block;
+    margin: -5px 0;
 }
 
 #s3AccentContent {
